<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.utt.if26.myapplication.InscriptionActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonMadame"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonMadame"/>

            <RadioButton
                android:id="@+id/radioButtonMonsieur"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonMonsieur"/>
        </LinearLayout>


        <EditText
            android:id="@+id/editTextNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textViewNom"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/editTextNomMarital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textViewNomMarital"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/editTextPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textViewPrenom"
            android:inputType="textPersonName"
            tools:ignore="LabelFor"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textViewEmail"
            android:inputType="textPersonName"
            tools:ignore="TextFields"/>

        <EditText
            android:id="@+id/editTextIdentifiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textViewIdentifiant"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewMotDePasse"/>

        <EditText
            android:id="@+id/editTextMotDePasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewConfirmerMotDePasse"/>

        <EditText
            android:id="@+id/editTextConfirmerMotDePasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/buttonValider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonValider"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
